k8s_code/my-springboot-app/my-springboot-k8s.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-springboot-app
  namespace: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-springboot-app
  template:
    metadata:
      labels:
        app: my-springboot-app
    spec:
      containers:
        - name: my-springboot-app
          image: host.docker.internal:5001/my-springboot-app:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: my-springboot-app
  namespace: web-app
spec:
  type: NodePort
  selector:
    app: my-springboot-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30004
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-springboot-app
  namespace: web-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - springboot.k8s
      secretName: web-app-tls
  rules:
    - host: springboot.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-springboot-app
                port:
                  number: 8080
